# rust_synth_gui

./: Cargo.toml  README.md
src/: app.rs  audio.rs  envelope.rs  main.rs  midi.rs  oscillator.rs  unison.rs
